# Spleller

./: .gitignore  CMakeLists.txt  README.md  Speller.cpp  Speller.h  Timer.cpp  Timer.h  dict.txt  main.cpp  speller_results  text.txt
DataStructures/: BinaryTree.cpp  BinaryTree.h  ChainHashTable.cpp  ChainHashTable.h  Trie.cpp  Trie.h  UnorderedMapWrapper.cpp  UnorderedMapWrapper.h  UnorderedSetWrapper.cpp  UnorderedSetWrapper.h  VectorWrapper.cpp  VectorWrapper.h  checker.h
data structures/: BinaryTree.cpp  BinaryTree.h  ChainHashTable.cpp  ChainHashTable.h  HashMapFacade.cpp  HashMapFacade.h  VectorFacade.cpp  VectorFacade.h  checker.cpp  checker.h
dict/: large.txt
texts/: sherlock.txt
